fix : added cloudflare analytics

--- a/client/index.html
+++ b/client/index.html
@@ -3,30 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-81M8VK3WSX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-81M8VK3WSX');
-  </script>
-  <meta name="msvalidate.01" content="60E4A93D8EBDF55113DF0E8CD3BA3AB0" />
-  <script type="text/javascript">
-    (function (c, l, a, r, i, t, y) {
-      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "gzrydo2oz5");
-  </script>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "f9c9dda545b748da9c7158d8e0f5682c"}'>
+    </script>
+  <!-- End Cloudflare Web Analytics -->
   <!-- Social Icons -->
   <meta name="msapplication-TileImage" content="kaizen-banner.png">
   <meta property="og:site_name" content="KAIZEN AIIMS, Patna 2024">
   <meta property="og:title" content="KAIZEN AIIMS, Patna 2024">
   <meta property="og:type" content="Kaizen, is AIIMS Patna's annual socio-cultural fest." />
-  <meta property="og:image" itemprop="image" content="//kaizenaiimspatna.com/kaizen-banner.png">
-  <meta property="og:url" content="https://www.kaizenaiimspatna.com/">
+  <meta property="og:image" itemprop="image" content="https://kaizenaiims.com/kaizen-banner.png">
+  <meta property="og:url" content="https://kaizenaiims.com">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:type" content="website" />
   <meta property="og:image:type" content="image/jpeg">
