--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,11 @@
     </script>
   <!-- End Cloudflare Web Analytics -->
   <!-- Social Icons -->
-  <meta name="msapplication-TileImage" content="kaizen-banner.png">
+  <meta name="msapplication-TileImage" content="og.jpg">
   <meta property="og:site_name" content="KAIZEN AIIMS, Patna 2024">
   <meta property="og:title" content="KAIZEN AIIMS, Patna 2024">
   <meta property="og:type" content="Kaizen, is AIIMS Patna's annual socio-cultural fest." />
-  <meta property="og:image" itemprop="image" content="https://kaizenaiims.com/kaizen-banner.png">
+  <meta property="og:image" itemprop="image" content="https://kaizenaiims.com/og.jpg">
   <meta property="og:url" content="https://kaizenaiims.com">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:type" content="website" />
