--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
   <meta name="googlebot" content="index, follow" />
   <meta name="google" content="notranslate" />
   <meta name="google-site-verification" />
+  <base href="/">
   <title>KAIZEN 2024</title>
   <style>
     body {
