--- a/client/index.html
+++ b/client/index.html
@@ -27,9 +27,9 @@
   <link rel="manifest" href="site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Kaizen, is AIIMS Patna's annual socio-cultural fest.This year with great resolve we'll be organizing one of the biggest concerts featuring a top national Bollywood singer and will also be hosting one of the nation's top stand up comedians" />
+    content="Kaizen, is AIIMS Patna's annual socio-cultural fest. This year with great resolve we'll be organizing one of the biggest concerts featuring a top national Bollywood singer and will also be hosting one of the nation's top stand up comedians" />
   <meta name="keywords"
-    content="AIIMS Patna ,AIIMS, Patna, KAIZEN, KAIZEN 2024, Annual fest, Annual fest of AIIMS Patna, College Fest, KAIZEN AIIMS Patna, Patna College Fest, Tech Fest AIIMS Patna" />
+    content="AIIMS Patna, AIIMS Patna Fest, AIIMS, Patna, KAIZEN, KAIZEN 2024, Annual fest, Annual fest of AIIMS Patna, College Fest, KAIZEN AIIMS Patna, Patna College Fest, Tech Fest AIIMS Patna" />
   <meta name="author" content="AIIMS Patna" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
