--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
   <link rel="manifest" href="site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Kaizen, is AIIMS Patna's annual socio-cultural fest. This year with great resolve we'll be organizing one of the biggest concerts featuring a top national Bollywood singer and will also be hosting one of the nation's top stand up comedians" />
+    content="Experience KAIZEN 2024 at AIIMS Patna - an electrifying socio-cultural fest with a massive Bollywood concert featuring a top singer and a thrilling performance by one of India's leading stand-up comedians, bands and DJ." />
   <meta name="keywords"
     content="AIIMS Patna, AIIMS Patna Fest, AIIMS, Patna, KAIZEN, KAIZEN 2024, Annual fest, Annual fest of AIIMS Patna, College Fest, KAIZEN AIIMS Patna, Patna College Fest, Tech Fest AIIMS Patna" />
   <meta name="author" content="AIIMS Patna" />
@@ -37,7 +37,7 @@
   <meta name="google" content="notranslate" />
   <meta name="google-site-verification" />
   <base href="/">
-  <title>KAIZEN 2024</title>
+  <title>KAIZEN 2024 | AIIMS Patna</title>
   <style>
     body {
       margin: 0;
